--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             clearInterval(id);
             onDone();
           }
-          avatar.setAttribute("position", "0 0 " + z);
+          avatar.setAttribute("position", "0 -0.25 " + z);
         }, 10);
       }
 
@@ -268,8 +268,8 @@
           <img id="icon-play" src="./assets/icons/play.png">
           <img id="icon-left" src="./assets/icons/left.png">
           <img id="icon-right" src="./assets/icons/right.png">
-          <video id="ex-holo-video-mp4" autoplay loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
-          <video id="ex-holo-video-webm" autoplay loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
+          <video id="ex-holo-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
+          <video id="ex-holo-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
           <img id="pma-about-preview-img" src="./assets/portfolio/exintrovid-preview.png">
           <video id="pma-about-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
           <video id="pma-about-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
@@ -289,6 +289,8 @@
           <a-plane src="#card-overlay" position="0 0 0" height="0.552" width="1" rotation="0 0 0" material="" geometry=""></a-plane>
 
           <a-entity visible="false" id="portfolio-panel" position="0 0 -0.01">
+            <a-text value="Explainer Videos" color="black" text-align="center" width="2" position="0 0.4 0" text=""></a-text>
+
             <a-entity id="pma-about-video">
               <a-video id="pma-about-video-link" webkit-playsinline="" playsinline="" width="1" height="0.552" position="0 0 0" material="" geometry=""></a-video>
               <a-image id="pma-play-button" class="clickable" src="#pma-about-preview-img" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
@@ -320,7 +322,7 @@
 
           <a-image visible="false" id="more-links-button" class="clickable" src="#icon-more-links" alpha-test="0.5" position="0.42 -0.4 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-gltf-model id="avatar" rotation="0 0 0" position="-0.7 0.5 0.1" scale="0.004 0.004 0.004" src="#avatarModel" gltf-model=""></a-gltf-model>
+          <a-gltf-model id="avatar" rotation="0 0 0" position="0 -0.25 0" scale="0.004 0.004 0.004" src="#avatarModel" gltf-model=""></a-gltf-model>
 
           <a-text id="text" class="clickable" value="Click an icon then click here" color="black" align="center" width="2" position="0 -0.6 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5" text=""></a-text>
         </a-entity>
