update syntax for about video

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <a-entity visible="false" id="portfolio-panel" position="0 0 -0.01">
             <a-entity id="about-video">
               <a-video id="about-video-link" webkit-playsinline="" playsinline="" width="1" height="0.552" position="0 0 0" material="" geometry=""></a-video>
-              <a-image id="play-button" class="clickable" src="#about-preview-img" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
+              <a-image id="aboutvideo-play-button" class="clickable" src="#about-preview-img" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
             </a-entity>
 
           </a-entity>
