--- a/index.html
+++ b/index.html
@@ -268,9 +268,10 @@
           <img id="icon-play" src="./assets/icons/play.png">
           <img id="icon-left" src="./assets/icons/left.png">
           <img id="icon-right" src="./assets/icons/right.png">
-          <video id="ex-holo-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
-          <video id="ex-holo-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
+          <video id="ex-holo-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/holotest.mp4" playsinline="" webkit-playsinline=""></video>
+          <video id="ex-holo-video-webm" autoplay="false" loop="true" src="./assets/portfolio/holotest.webm" playsinline="" webkit-playsinline=""></video>
           <img id="pma-about-preview-img" src="./assets/portfolio/exintrovid-preview.png">
+          <img id="holo-about-preview-img" src="./assets/portfolio/holotest-preview.png">
           <video id="pma-about-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
           <video id="pma-about-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
           <img id="fsm-about-preview-img" src="./assets/portfolio/exbizcard.png">
@@ -289,7 +290,7 @@
           <a-plane src="#card-overlay" position="0 0 0" height="0.552" width="1" rotation="0 0 0" material="" geometry=""></a-plane>
 
           <a-entity visible="false" id="portfolio-panel" position="0 0 -0.01">
-            <a-text value="Explainer Videos" color="black" text-align="center" width="2" position="0 0.4 0" text=""></a-text>
+            <a-text value="Explainer Videos" color="black" align="center" width="2" position="0 0.4 0" text=""></a-text>
 
             <a-entity id="pma-about-video">
               <a-video id="pma-about-video-link" webkit-playsinline="" playsinline="" width="1" height="0.552" position="0 0 0" material="" geometry=""></a-video>
@@ -311,7 +312,7 @@
 
           <a-entity id="ex-holo-video">
             <a-video id="ex-holo-video-link" webkit-playsinline="" playsinline="" width="0.552" height="0.78" position="0.85 0 0" material="" geometry=""></a-video>
-            <a-image id="exholo-play-button" class="clickable" src="#pma-about-preview-img" alpha-test="0.5" position="0.85 0 0" height="0.78" width="0.552" material="" geometry=""></a-image>
+            <a-image id="exholo-play-button" class="clickable" src="#holo-about-preview-img" alpha-test="0.5" position="0.85 0 0" height="0.78" width="0.552" material="" geometry=""></a-image>
           </a-entity>
 
           <a-image visible="false" id="phone-button" class="clickable" src="#icon-phone" position="-0.42 -0.4 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
