--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
           <a-image visible="false" id="more-links-button" class="clickable" src="#icon-more-links" alpha-test="0.5" position="0.42 -0.4 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-gltf-model id="avatar" rotation="0 0 0" position="0 -0.25 0" scale="0.004 0.004 0.004" src="#avatarModel" gltf-model=""></a-gltf-model>
+          <a-gltf-model id="avatar" rotation="0 0 0" position="0 -0.25 0" scale="0.004 0.004 0.004" src="#avatarModel" gltf-model="#avatarModel"></a-gltf-model>
 
           <a-text id="text" class="clickable" value="Click an icon then click here" color="black" align="center" width="2" position="0 -0.6 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5" text=""></a-text>
         </a-entity>
